--- a/wall.html
+++ b/wall.html
@@ -1,27 +1,15 @@
 <html>
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-<script src="socket.io.js"></script> 
+<script src="/socket.io/socket.io.js"></script> 
 <script> 
 
 function fun()
 {
-    var socket = new io.Socket('localhost',{'port':8090});
+    var socket = io.connect();
 
-    socket.connect();
-
-    socket.on('connect', function(){
-        console.log('connected');
-        socket.send('hi!'); 
-    });
-
-
-    socket.on('message', function(data){ 
-        console.log('message recived: ' + data);
-    });
-
-    socket.on('disconnect', function(){
-        console.log('disconected');
+    socket.on('tweet', function(){
+        console.log('tweet'); 
     });
 }
 
