--- a/wall.html
+++ b/wall.html
@@ -2,15 +2,20 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular-animate.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<style type="text/css">
 			.circle {
+				-webkit-animation: tada 1s linear;
+				animation: tada 1s linear;
 				width: 200px;
 				height: 200px;
 				background-color: red;
 				border-radius: 50%;
 				overflow: hidden;
 			}
+			
+			@-webkit-keyframes tada{0%{-webkit-transform:scale(1);transform:scale(1)}10%,20%{-webkit-transform:scale(.9)rotate(-3deg);transform:scale(.9)rotate(-3deg)}30%,50%,70%,90%{-webkit-transform:scale(1.1)rotate(3deg);transform:scale(1.1)rotate(3deg)}40%,60%,80%{-webkit-transform:scale(1.1)rotate(-3deg);transform:scale(1.1)rotate(-3deg)}100%{-webkit-transform:scale(1)rotate(0);transform:scale(1)rotate(0)}}@keyframes tada{0%{-webkit-transform:scale(1);-ms-transform:scale(1);transform:scale(1)}10%,20%{-webkit-transform:scale(.9)rotate(-3deg);-ms-transform:scale(.9)rotate(-3deg);transform:scale(.9)rotate(-3deg)}30%,50%,70%,90%{-webkit-transform:scale(1.1)rotate(3deg);-ms-transform:scale(1.1)rotate(3deg);transform:scale(1.1)rotate(3deg)}40%,60%,80%{-webkit-transform:scale(1.1)rotate(-3deg);-ms-transform:scale(1.1)rotate(-3deg);transform:scale(1.1)rotate(-3deg)}100%{-webkit-transform:scale(1)rotate(0);-ms-transform:scale(1)rotate(0);transform:scale(1)rotate(0)}}
 		</style>
 	</head>
 	<body ng-app="wall">
@@ -20,7 +25,7 @@
 			</div>
 		</div>
 		<script>
-			var wall = angular.module("wall", []);
+			var wall = angular.module("wall", ['ngAnimate']);
 			
 			wall.controller('wallCtrl', function($scope) {
 				$scope.tweets = [];
